--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -84,6 +84,7 @@
 
 
 
+
 /*-----------------------------------*\
   #RESET
 \*-----------------------------------*/
@@ -291,7 +292,7 @@ body {
 \*-----------------------------------*/
 
 .header {
-  background: var(--viridian-green);
+  background: var(--black);
   padding-block: 20px;
   height: 88px;
   overflow: hidden;
@@ -367,6 +368,7 @@ body {
 .hero {
   background-repeat: no-repeat, no-repeat;
   background-position: bottom left, top right;
+  opacity: 0.8;
 }
 
 .hero-content { margin-bottom: 50px; }
@@ -374,8 +376,8 @@ body {
 .hero .section-subtitle { margin-bottom: 15px; }
 
 .hero-title {
-  color: var(--oxford-blue);
-  font-size: var(--fs-1);
+  color: var(--white-1);
+  font-size:100px;
   font-family: var(--ff-abril-fatface);
   font-weight: var(--fw-500);
   line-height: 1.2;
@@ -384,7 +386,7 @@ body {
 }
 
 .hero-text {
-  color: var(--black-coral);
+  color: var(--white-1);
   font-size: var(--fs-7);
   line-height: 1.7;
   margin-bottom: 15px;
